devcontainer: find the right  browser.sh, code, code-server

--- a/.envrc
+++ b/.envrc
@@ -5,3 +5,8 @@ export CODER_CONFIG_DIR=$HOME/.config/coderv2
 PATH="$HOME/bin/$(uname -s):$HOME/bin:$PATH"
 
 layout meh
+
+# devcontainer
+if test -d /vscode; then
+	PATH="$(ls -d /vscode/vscode-server/bin/linux*/*/bin):$(ls -d /vscode/vscode-server/bin/linux*/*/bin/remote-cli):$(ls -d /vscode/vscode-server/bin/linux*/*/bin/helpers):$PATH"
+fi
