custom devcontainer to insert nix into PATH

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,7 @@
 {
-	"image": "ghcr.io/defn/dev:latest-devcontainer",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
 	"mounts": [
 		"source=work,target=/workspaces",
 		"source=nix,target=/nix",
