pick the latest vscode

--- a/.envrc
+++ b/.envrc
@@ -8,5 +8,8 @@ layout meh
 
 # devcontainer
 if test -d /vscode; then
-	PATH="$(ls -d /vscode/vscode-server/bin/linux*/*/bin):$(ls -d /vscode/vscode-server/bin/linux*/*/bin/remote-cli):$(ls -d /vscode/vscode-server/bin/linux*/*/bin/helpers):$PATH"
+  vsd="$(ls -td /vscode/vscode-server/bin/linux*/* | head -1)"
+	PATH="$vsd/bin:$vsd/bin/remote-cli:$vsd/bin/helpers:$PATH"
+  unset vsd
 fi
+
