--- a/Makefile.common
+++ b/Makefile.common
@@ -29,14 +29,11 @@ perms:
 	-chmod 0600 ~/.kube/config
 
 install:
-	-$(MAKE) nix-$(shell uname -s)
-	$(MAKE) install-inner
+	$(MAKE) nix
+	bin/withde ~ $(MAKE) install-inner
 
 install-inner:
 	$(MAKE) symlinks perms
-
-	@mark nix
-	$(MAKE) nix
 
 	@mark configure password-store
 	mkdir -p ~/work/password-store
