--- a/Makefile.common
+++ b/Makefile.common
@@ -83,7 +83,14 @@ nix-Darwin-upgrade:
 	sudo -i sh -c 'nix-channel --update && nix-env -iA nixpkgs.nix && launchctl remove org.nixos.nix-daemon && launchctl load /Library/LaunchDaemons/org.nixos.nix-daemon.plist'
 
 nix:
-	if ! type -P nix; then . ~/.nix-profile/etc/profile.d/nix.sh; fi && ($(MAKE) nix-$(shell uname -s) || true)
+	$(MAKE) nix-$(shell uname -s)
+
+nix-Linux:
+	export LC_ALL=C.UTF-8 && if ! test -x ~/.nix-profile/bin/nix; then $(MAKE) nix-Linux-bootstrap; fi
+	if test "$(shell which direnv nixpkgs-fmt | grep /nix/store | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
+
+nix-Darwin:
+	if test "$(shell which direnv nixpkgs-fmt | grep /nix/store | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
 
 nix-Linux-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --no-daemon
@@ -94,10 +101,3 @@ nix-Darwin-bootstrap:
 nix-reinstall:
 	nix profile list | tail -n +2 | awk '{print $$NF}' | xargs nix profile remove
 	$(MAKE) nix
-
-nix-Linux:
-	export LC_ALL=C.UTF-8 && if ! test -x ~/.nix-profile/bin/nix; then $(MAKE) nix-Linux-bootstrap; fi
-	if test "$(shell which direnv nixpkgs-fmt | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
-
-nix-Darwin:
-	if test "$(shell which direnv nixpkgs-fmt | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
