--- a/Makefile.common
+++ b/Makefile.common
@@ -87,10 +87,10 @@ nix:
 
 nix-Linux:
 	export LC_ALL=C.UTF-8 && if ! type -P nix; then $(MAKE) nix-Linux-bootstrap; fi
-	if test "$(shell which direnv nixpkgs-fmt | grep /nix | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
+	. ~/.nix-profile/etc/profile.d/nix.sh && if test "$(shell which direnv nixpkgs-fmt | grep /nix | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
 
 nix-Darwin:
-	if test "$(shell which direnv nixpkgs-fmt | grep /nix | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
+	. ~/.nix-profile/etc/profile.d/nix.sh && if test "$(shell which direnv nixpkgs-fmt | grep /nix | wc -l)" != "2"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,nixpkgs-fmt}; fi
 
 nix-Linux-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --no-daemon
