--- a/etc/nix.conf
+++ b/etc/nix.conf
@@ -6,5 +6,5 @@ build-users-group = nixbld
 trusted-users = root defn
 
 substituters = https://cache.nixos.org
-trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA= wh.fly.dev:CY8OGUBrwUv+fg5H5RJxEIc1gO/sp9LgwAPG6Ln7tfU=
+trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA=
 require-sigs = true
