--- a/.gitconfig
+++ b/.gitconfig
@@ -10,10 +10,10 @@
 [core]
   quotepath = false
 
-[url "https://github.com/"]
-  insteadOf = git@github.com:
+[url "git@github.com:"]
   insteadOf = git://github.com/
   insteadOf = ssh://git@github.com/
+  insteadOf = https://github.com/
 
 [pull]
   rebase = false
@@ -25,6 +25,7 @@
 [credential "https://gist.github.com"]
 	helper =
 	helper = !gh auth git-credential
+
 [filter "lfs"]
 	required = true
 	clean = git-lfs clean -- %f
