--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
-FROM ghcr.io/defn/dev:latest-devcontainer
+FROM quay.io/defn/dev:latest-devcontainer
 
 RUN sudo ln -nfs /home/ubuntu/.nix-profile/bin/nix-instantiate /usr/local/bin/
