--- a/etc/ec2-user-data.template
+++ b/etc/ec2-user-data.template
@@ -36,7 +36,7 @@ spec:
     TOKEN="$(curl -sSL -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")"
     instance="$(curl -sSL -H "X-aws-ec2-metadata-token: $TOKEN" -v http://169.254.169.254/latest/meta-data/instance-id)"
 
-    echo FROM ghcr.io/defn/dev:latest-k3d > Dockerfile
+    echo FROM quay.io/defn/dev:latest-k3d > Dockerfile
     echo ENV DEFN_DEV_TSKEY=_TSKEY_ >> Dockerfile
     docker build -t k3d-control .
     rm -f Dockerfile
