--- a/Makefile.common
+++ b/Makefile.common
@@ -79,6 +79,7 @@ nix-Darwin-upgrade:
 	sudo -i sh -c 'nix-channel --update && nix-env -iA nixpkgs.nix && launchctl remove org.nixos.nix-daemon && launchctl load /Library/LaunchDaemons/org.nixos.nix-daemon.plist'
 
 nix:
+	-ln -nfs $(ls -d /nix/store/*-nix-2.14.1/etc) ~/.local/state/nix/profiles/profile/etc
 	(. ~/.nix-profile/etc/profile.d/nix.sh || true); $(MAKE) nix-$(shell uname -s)
 
 nix-Linux:
