mount HOME from a volume

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
 		"source=work,target=/workspaces",
 		"source=nix,target=/nix",
 		"source=nix-cache,target=/cache",
+		"source=home,target=/home/ubuntu",
 		"source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
 	],
 	"workspaceMount": "source=${localWorkspaceFolder}/.devcontainer,target=/w,type=bind,consistency=cached",
