go back to https

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,10 +10,10 @@
 [core]
   quotepath = false
 
-[url "git@github.com:"]
+[url "https://github.com/"]
   insteadOf = git://github.com/
   insteadOf = ssh://git@github.com/
-  insteadOf = https://github.com/
+  insteadOf = git@github.com:
 
 [pull]
   rebase = false
