run in a network named dev

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 		"--init",
 		"--privileged",
 		"--device=/dev/net/tun",
-		"--env-file",
-		"${localWorkspaceFolder}/.dotfiles/.env"
+    "--network=app-network=dev",
+		"--env-file=${localWorkspaceFolder}/.dotfiles/.env"
 	]
 }
