--- a/Makefile.common
+++ b/Makefile.common
@@ -6,6 +6,7 @@ first_ = $(word 1, $(subst _, ,$@))
 second_ = $(word 2, $(subst _, ,$@))
 
 macos:
+	@mark macos
 	-$(shell which gpg-agent) --daemon --pinentry-program $$(which pinentry-mac)
 	for ip in $(dummy_ip); do if ! ifconfig lo0 | grep "inet $$ip"; then sudo -A ifconfig lo0 alias "$$ip" netmask 255.255.255.255; fi; done;
 	ifconfig lo0
@@ -75,8 +76,8 @@ install-inner:
 	ssh-add -L; echo; echo
 
 	@mark up
-	~/bin/withde ~ true
 	this-up
+	while true; do if vault status; the break; fi; sleep 5; done
 
 	this-login
 
