install balena etcher

--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -60,5 +60,8 @@
     "dev.containers.copyGitConfig": true,
     "dev.containers.gitCredentialHelperConfigLocation": "none",
     "go.terminal.activateEnvironment": false,
-    "window.zoomLevel": 0
+    "window.zoomLevel": 0,
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
