--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,8 @@ use flake
 
 PATH="$HOME/bin/$(uname -s):$HOME/bin:$PATH"
 
+export VAULT_TOKEN="$(pass Initial_Root_Token)"
+
 layout meh
 
 # devcontainer
