dont load any pass on .envrc in home

--- a/.envrc
+++ b/.envrc
@@ -2,7 +2,7 @@ use flake
 
 PATH="$HOME/bin/$(uname -s):$HOME/bin:$PATH"
 
-export VAULT_TOKEN="$(pass Initial_Root_Token 2>&- || true)"
+#export VAULT_TOKEN="$(pass Initial_Root_Token 2>&- || true)"
 
 layout meh
 
