--- a/Makefile.common
+++ b/Makefile.common
@@ -11,6 +11,7 @@ macos:
 	for ip in $(dummy_ip); do if ! ifconfig lo0 | grep "inet $$ip"; then sudo -A ifconfig lo0 alias "$$ip" netmask 255.255.255.255; fi; done;
 	ifconfig lo0
 	defaults write -g ApplePressAndHoldEnabled -bool false
+	sudo ln -nfs ~/.docker/run/docker.sock /var/run/docker.sock
 	while true; do if docker ps; then break; fi; sleep 5; done
 	-docker context create host --docker host=unix:///var/run/docker.sock
 	-docker network create dev
