--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -65,5 +65,8 @@
     },
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
