--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -4,9 +4,6 @@
     "editor.minimap.enabled": false,
     "extensions.ignoreRecommendations": true,
     "git.confirmSync": false,
-    "gitlens.codeLens.enabled": false,
-    "gitlens.statusBar.enabled": false,
-    "redhat.telemetry.enabled": false,
     "terminal.integrated.copyOnSelection": true,
     "terminal.integrated.enableMultiLinePasteWarning": false,
     "terminal.integrated.localEchoEnabled": "off",
@@ -30,13 +27,6 @@
     "workbench.colorTheme": "Default Dark+",
     "workbench.editor.untitled.hint": "hidden",
     "workbench.startupEditor": "none",
-    "calva.prettyPrintingOptions": {
-        "printEngine": "pprint",
-        "enabled": true,
-        "width": 120,
-        "maxLength": 50
-    },
-    "calva.paredit.defaultKeyMap": "strict",
     "go.survey.prompt": false,
     "go.toolsManagement.checkForUpdates": "off",
     "gopls": {
@@ -68,5 +58,6 @@
     },
     "[jsonc]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    "svelte.enable-ts-plugin": true
 }
